vlib/v/scanner/tests/undefined_ident_in_string_literal_err.vv
fn abc() string {
	return 'abc $type'
}

fn xyz() string {
	return '42P01'
}

fn main() {}
